# transport-data-platform

./: .gitignore  Makefile  README.md  depart_montparnasse.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docker/: Dockerfile.spark
ingestion/: sncf_api.py
spark/jobs/: raw_to_staging.py  staging_to_prod.py
spark/utils/: spark_session.py
transport_dbt/: dbt_project.yml
transport_dbt/models/: avg_delay_by_station.sql  avg_delay_by_train_type.sql
